# retrovue_air

./: .gitignore  CMakeLists.txt  INSTALL_VCPKG_PACKAGES.sh  PHASE1_SKELETON.md  PHASE2_COMPLETE.md  PHASE3_FFMPEG_IMPLEMENTATION.md  PHASE3_PLAN.md  README.md  REFACTORING_COMPLETE.md
core_test_harness/: __init__.py  frame_ring_buffer.py  master_clock.py  renderer_stub.py  run_harness.py  station_time_mapper.py  video_file_decoder.py
docs/: INDEX.md  PROJECT_OVERVIEW.md  README.md  development-standards.md
docs/architecture/: ArchitectureOverview.md
docs/contracts/: MetricsAndTimingContract.md  PlayoutEngineContract.md  RendererContract.md
docs/developer/: BuildAndDebug.md  Phase2_Goals.md  QuickStart.md
docs/domain/: MetricsAndTimingDomain.md  PlayoutDomainContract.md  PlayoutEngineDomain.md  RendererAndHTTPContract.md
docs/infra/: Integration.md
docs/milestones/: Phase3_Complete.md  Roadmap.md
docs/milestones/archive/: Phase3_FFmpeg.md  Phase3_Part2_Complete.md
docs/runtime/: PlayoutRuntime.md
include/retrovue/buffer/: FrameRingBuffer.h
include/retrovue/decode/: FFmpegDecoder.h  FrameProducer.h
include/retrovue/playout_sinks/mpegts/: MpegTSPlayoutSink.hpp  MpegTSPlayoutSinkConfig.hpp  TsOutputSink.h
include/retrovue/runtime/: PlayoutController.h  PlayoutEngine.h
include/retrovue/telemetry/: MetricsExporter.h
proto/retrovue/: playout.proto
scripts/: generate_proto.sh  generate_stubs.py  test_metrics.sh  test_server.py
src/: main.cpp  playout_service.cpp  playout_service.h
src/buffer/: FrameRingBuffer.cpp
src/decode/: FFmpegDecoder.cpp  FrameProducer.cpp
src/playout_sinks/mpegts/: MpegTSPlayoutSink.cpp  TsOutputSink.cpp
src/runtime/: PlayoutController.cpp  PlayoutEngine.cpp
src/telemetry/: MetricsExporter.cpp
tests/: BaseContractTest.h  ContractRegistry.cpp  test_buffer.cpp  test_decode.cpp
tests/contracts/: ContractRegistryEnvironment.cpp  ContractRegistrySanityTest.cpp
tests/contracts/MasterClock/: MasterClockContractTests.cpp
tests/contracts/MetricsAndTiming/: MT_005_LongRunDriftStability.cpp  MetricsAndTimingContractTests.cpp
tests/contracts/PlayoutEngine/: PlayoutEngineContractTests.cpp
tests/contracts/Renderer/: RendererContractTests.cpp
tools/: check_api_version.cpp
